# sas_conversions

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ros-noetic-build.yml  ros2-humble-build.yml
include/rosilo_conversions/: DQ_geometry_msgs_conversions.h  eigen3_std_conversions.h  rosilo_conversions.h  std_std_msgs_conversions.h
include/sas_conversions/: DQ_geometry_msgs_conversions.h  DQ_geometry_msgs_conversions.hpp  eigen3_std_conversions.h  eigen3_std_conversions.hpp  sas_conversions.hpp  std_std_msgs_conversions.h  std_std_msgs_conversions.hpp
sas_conversions/: DQ_geometry_msgs_conversions.py  __init__.py  std_std_msgs_conversions.py
src/: DQ_geometry_msgs_conversions.cpp  eigen3_std_conversions.cpp  std_std_msgs_conversions.cpp
src/examples/: sas_conversions_example_readme.cpp
src/rosilo_conversions/: DQ_geometry_msgs_conversions.py  __init__.py  std_std_msgs_conversions.py
src/sas_conversions/: DQ_geometry_msgs_conversions.py  __init__.py  std_std_msgs_conversions.py
